--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://rsms.me/inter/inter.css" rel="stylesheet">
+    <link href="https://rsms.me/inter/inter.css" rel="stylesheet" />
     <title>Valve KeyValues Parser Online</title>
   </head>
   <body>
